# gpr200-fa2024-elysium-hosack

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: background.frag  background.vert  hellotriangle.frag  hellotriangle.vert
assignments/assignment4/: CMakeLists.txt  main.cpp
assignments/assignment4/assets/: AverageNebraskaResident.ase  background.frag  background.vert  hellotextures.vert  space.ase
assignments/assignment5/: CMakeLists.txt  main.cpp
assignments/assignment5/assets/: cube.frag  cube.vert  lightCube.frag  lighting.frag
assignments/demos/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/serenity/: Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
core/serinity/: Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
